# location-intelligence

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  SPEC.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: push.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: analyze.py  categories.py  health.py  search.py
apps/api/app/clients/: osrm.py  overpass.py  photon.py  redis_client.py
apps/api/app/config/: settings.py
apps/api/app/models/: domain.py
apps/api/app/repositories/: cache.py
apps/api/app/repositories/db/: address_repository.py  connection.py
apps/api/app/schemas/: requests.py  responses.py
apps/api/app/services/: distance.py  facilities.py  geocoding.py  scoring.py
apps/api/tests/: conftest.py  test_api.py  test_distance.py  test_scoring.py
apps/web/: TOAST_EXAMPLE_USAGE.md  eslint.config.mjs  jest.config.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: middleware.ts  proxy.ts
apps/web/src/app/: layout.tsx  not-found.tsx
apps/web/src/components/: CategoryGroup.tsx  DistanceToggle.tsx  FacilityItem.tsx  INTEGRATION_EXAMPLE.tsx  INTEGRATION_GUIDE.md  LoadingSkeleton.tsx  MapView.tsx  MapViewDynamic.tsx  Providers.tsx  RESULTS_PANEL.md  ResultsPanel.tsx  RouteOptionCard.tsx  ScoreDisplay.tsx  SearchBar.tsx  TOAST.md  TOAST_QUICK_REF.md  Toast.test.tsx  Toast.tsx  (+1 more)
docker/: Dockerfile.photon  Dockerfile.postgis
docker/sql/: 01_schema.sql  02_load.sql  03_post_load.sql
scripts/: diagnose.sh  setup-osrm.sh
(+71 files in other folders)
